<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/minty_white"
    tools:context=".ui.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/app_name"
        android:textColor="@color/muted_plum"
        android:textStyle="bold"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/veggiesImage" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/main_subtitle"
        android:textColor="@color/mint_green"
        android:textSize="25sp"

        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/viewFoodListButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/veggiesImage"
        android:layout_width="413dp"
        android:layout_height="270dp"
        android:layout_marginStart="-20dp"
        android:layout_marginTop="-8dp"
        android:contentDescription="@string/veggies_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/veggies" />

    <Button
        android:id="@+id/addFoodButton"
        android:layout_width="290dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/pastel_yellow"
        android:fontFamily="sans-serif-medium"
        android:text="@string/button_add_edit"
        android:textColor="@color/dark_green"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/viewFoodListButton"
        android:layout_width="290dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/pastel_yellow"
        android:fontFamily="sans-serif-medium"
        android:text="@string/button_view_list"
        android:textColor="@color/dark_green"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/addFoodButton"
        app:layout_constraintStart_toStartOf="@+id/addFoodButton"
        app:layout_constraintTop_toBottomOf="@+id/addFoodButton" />


</androidx.constraintlayout.widget.ConstraintLayout>