<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="115dp"
    android:background="#FFF9F0"
    android:padding="24dp">

    <!-- Title -->
    <CheckBox
        android:id="@+id/foodCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/food_item_placeholder"
        android:textColor="@color/muted_plum"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/foodExpiration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="-8dp"
        android:text="@string/expiration_label"
        android:textColor="@color/muted_plum"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/foodCheckBox"
        app:layout_constraintTop_toBottomOf="@+id/foodCheckBox" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="60dp"
        android:layout_height="64dp"
        android:contentDescription="@string/warning"
        app:layout_constraintBottom_toBottomOf="@+id/foodExpiration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/foodCheckBox"
        app:srcCompat="@drawable/warning" />


</androidx.constraintlayout.widget.ConstraintLayout>