<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/minty_white">

    <!-- Title -->
    <TextView
        android:id="@+id/addFoodTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_list_title"
        android:textSize="26sp"
        android:textStyle="bold"
        android:textColor="@color/dark_green"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- RecyclerView for displaying items -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/foodRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:overScrollMode="never"
        android:padding="4dp"
        app:layout_constraintTop_toBottomOf="@id/addFoodTitle"
        app:layout_constraintBottom_toTopOf="@id/formLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Form Section -->
    <LinearLayout
        android:id="@+id/formLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp"
        android:background="@color/mint_green"
        android:elevation="2dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Food Name -->
        <EditText
            android:id="@+id/foodNameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_food"
            android:padding="10dp"
            android:background="@android:drawable/edit_text"
            android:inputType="text"
            android:textSize="16sp" />

        <!-- Expiration Date -->
        <EditText
            android:id="@+id/expirationDateInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_date"
            android:padding="10dp"
            android:layout_marginTop="8dp"
            android:background="@android:drawable/edit_text"
            android:inputType="date"
            android:textSize="16sp" />

        <!-- Save Button -->
        <Button
            android:id="@+id/saveFoodButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_food"
            android:layout_marginTop="12dp"
            android:backgroundTint="@color/pastel_yellow"
            android:textColor="@color/muted_plum"
            android:layout_gravity="center"/>


        <ImageButton
            android:id="@+id/returnHomeButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/arrow"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewRecipeSuggestionsButton"
            app:srcCompat="@drawable/arrow" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>